--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,40 @@
+argcomplete==1.9.2
+base58==0.2.4
+boto3==1.4.7
+botocore==1.7.14
 certifi==2017.7.27.1
 chardet==3.0.4
 click==6.7
+docutils==0.14
+durationpy==0.5
 Flask==0.12.2
+future==0.16.0
+futures==3.1.1
 gunicorn==19.7.1
+hjson==3.0.0
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.9.6
+jmespath==0.9.3
+kappa==0.6.0
+lambda-packages==0.16.1
 MarkupSafe==1.0
+placebo==0.8.1
 PyJWT==1.5.3
 PySocks==1.6.7
+python-dateutil==2.6.1
+python-slugify==1.2.4
 pytz==2017.2
+PyYAML==3.12
 requests==2.18.4
+s3transfer==0.1.11
 six==1.11.0
+toml==0.9.2
+tqdm==4.15.0
+troposphere==2.0.0
 twilio==6.7.0
+Unidecode==0.4.21
 urllib3==1.22
-Werkzeug==0.12.2
+Werkzeug==0.12
+wsgi-request-logger==0.4.6
+zappa==0.44.3
